--- a/src/Components/Global/TwoSideBlock/TwoSideBlock.scss
+++ b/src/Components/Global/TwoSideBlock/TwoSideBlock.scss
@@ -41,7 +41,7 @@
   &__subtitle {
     text-align: center;
     max-width: 25rem;
-    margin: 0 auto 1.563rem;
+    margin: 0 auto;
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
@@ -68,15 +68,12 @@
     }
 
     &.mobile {
-      margin: 2rem auto 0.5rem;
+      margin: 1rem auto 0.5rem;
     }
   }
 
   &__sublink {
     margin-top: 1.875rem;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 22px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -87,6 +84,9 @@
 
     a {
       color: #0022FF;
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 22px;
     }
 
     &-img {
